--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.0
+Forked, costumized built pipeline to make to make if work with the LoopIT
+
 1.4.3
 
 Fixed a possible buffer overflow in txt record parse
